--- a/web_app/templates/includes/_navbar.html
+++ b/web_app/templates/includes/_navbar.html
@@ -1,20 +1,13 @@
-<nav class="navbar navbar-dark" style="background-color:#345096;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color:#345096;">
   <a class="navbar-brand" href="#">{ZSW}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/map">Map</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/results">Results</a>
-      </li>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/home">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="/map">Map</a>
+      <a class="nav-item nav-link" href="/results">Results</a>
+    </div>
   </div>
-  </ul>
 </nav>
