added transparent background

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -2,27 +2,38 @@
 
 {% block body %}
 <div class="home-container">
-
-    <div class="intro">
+    <div class="summary">
         <h4>Introduction</h4>
-        <p>The Incarceration Trends Project aims to inform the public dialogue, advance research, 
-            and help guide change by providing easily accessible information on jail and prison 
+        <p>The Incarceration Trends Project aims to inform the public dialogue, advance research,
+            and help guide change by providing easily accessible information on jail and prison
             populations in every U.S. county.
-        </p>
-        <h4>Spatial Analysis</h4>
-        <p>         
-            The centerpiece of the project is an interactive data tool,
-            available at trends.vera.org, that can be used for reference and measurement by justice system 
-            stakeholders and others looking to understand how their county uses jail and prison incarceration
-            and how it compares to others over time. 
-        <h4>Statistical Analysis</h4>
-        <p>         
-            The centerpiece of the project is an interactive data tool,
-            available at trends.vera.org, that can be used for reference and measurement by justice system 
-            stakeholders and others looking to understand how their county uses jail and prison incarceration
-            and how it compares to others over time. 
-        </p>
         </p>
     </div>
 </div>
+
+
+<div class="home-container">
+<div class="summary">
+    <h4>Spatial Analysis</h4>
+    <p>
+        The centerpiece of the project is an interactive data tool,
+        available at trends.vera.org, that can be used for reference and measurement by justice system
+        stakeholders and others looking to understand how their county uses jail and prison incarceration
+        and how it compares to others over time.
+    </p>
+</div>
+</div>
+
+<div class="home-container">
+<div class="summary">
+    <h4>Statistical Analysis</h4>
+    <p>
+        The centerpiece of the project is an interactive data tool,
+        available at trends.vera.org, that can be used for reference and measurement by justice system
+        stakeholders and others looking to understand how their county uses jail and prison incarceration
+        and how it compares to others over time.
+    </p>
+</div>
+</div>
+
 {% endblock %}
