--- a/web_app/static/style.css
+++ b/web_app/static/style.css
@@ -1,17 +1,31 @@
 .home-container {
     color: #111010;
     background-color: #cfcff3;
-    margin-top: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding: 5%;
+    margin-top: 15pt;
+    margin-bottom: 15pt;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 1%;
     }
 
 /*** Body ****/
-body {
-    background-color: #aaabf1;
+/* body {
+    background-image: url("/static/img/cupwater.jpg");
     background-attachment: fixed;
     font-family: 'Oswald', sans-serif;
+} */
+
+#background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/static/img/cupwater.jpg');
+    background-attachment: fixed;
+    opacity: 0.5;
+    filter:alpha(opacity=80);
+    z-index: -1;
 }
 
 p {
