--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -4,36 +4,52 @@
 <div class="home-container">
     <div class="summary">
         <h4>Introduction</h4>
-        <p>The Incarceration Trends Project aims to inform the public dialogue, advance research,
-            and help guide change by providing easily accessible information on jail and prison
-            populations in every U.S. county.
+        <p> Understanding potential disparities in communities’ compliance with the
+            Safe Drinking Water Act (SDWA) will help managers effectively and fairly
+            allocate funding for improving drinking water systems. This study investigated
+            the relationship between socioeconomic status and race, and violations to the
+            SDWA by community water system (CWS) in the state of New Jersey. This research 
+            was a continuation of my master's thesis, which focused on Pennsylvania.
         </p>
     </div>
 </div>
 
 
 <div class="home-container">
-<div class="summary">
-    <h4>Spatial Analysis</h4>
-    <p>
-        The centerpiece of the project is an interactive data tool,
-        available at trends.vera.org, that can be used for reference and measurement by justice system
-        stakeholders and others looking to understand how their county uses jail and prison incarceration
-        and how it compares to others over time.
-    </p>
-</div>
+    <div class="summary">
+        <h4>Spatial Analysis</h4>
+        <p>
+            The sociodemographic characteristics of the water systems were
+            estimated using one CWS-level spatial analysis method
+            (areal weighting) and a county-level spatial analysis method:
+            <ul>
+                <li><strong>Areal Weighting</strong> This method assigns a proportion
+                    of the population to the affected area relative to the percent of
+                    the geographic unit within the discrete affected area boundary
+                    (e.g., a buffer). This method assumes equal distribution of the
+                    population within the census tracts.</li>
+                <li><strong>County-level Analysis</strong> This method assigned
+                    the percent people of color and the percent below the poverty
+                    line of the CWS’s county to that CWS. Although some CWSs serve
+                    more than one county, the primary one was determined based on the
+                    county listed in the SDWIS database. </li>
+            </ul>
+
+            The demographics estimated from these spatial analysis methods are shown in the map.
+        </p>
+    </div>
 </div>
 
 <div class="home-container">
-<div class="summary">
-    <h4>Statistical Analysis</h4>
-    <p>
-        The centerpiece of the project is an interactive data tool,
-        available at trends.vera.org, that can be used for reference and measurement by justice system
-        stakeholders and others looking to understand how their county uses jail and prison incarceration
-        and how it compares to others over time.
-    </p>
-</div>
+    <div class="summary">
+        <h4>Statistical Analysis</h4>
+        <p>
+            Negative binomial regression was then applied to determine if these
+            sociodemographic characteristics, and other water system variables (rural vs urban,
+            public vs private, small vs large, groundwater vs surface waterr),
+            are associated with the number of total and/or health-based SDWA violations.
+        </p>
+    </div>
 </div>
 
 {% endblock %}
