--- a/web_app/static/style.css
+++ b/web_app/static/style.css
@@ -25,7 +25,7 @@
     /* background-color: #6060a7; */
     background-image: url('/static/img/water.jpg');
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     opacity: 0.7;
     filter:alpha(opacity=80);
     z-index: -1;
