deployed web app on google app engine with docker image

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -8,7 +8,7 @@
             Safe Drinking Water Act (SDWA) will help managers effectively and fairly
             allocate funding for improving drinking water systems. This study investigated
             the relationship between socioeconomic status and race, and violations to the
-            SDWA by community water system (CWS) in the state of New Jersey. This research 
+            SDWA by community water system (CWS) in the state of New Jersey between 2012 and 2016. This research 
             was a continuation of my master's thesis, which focused on Pennsylvania.
         </p>
     </div>
