--- a/web_app/templates/results.html
+++ b/web_app/templates/results.html
@@ -4,7 +4,7 @@
 <div class="home-container">
     <h4>Total SDWA Violations</h4>
     <p>The tables below show whether the covariates had a significant positive relationship ("pos"), significant negative relationship ("neg") or no 
-        relationship to the total and/or health-based SDWA violations. The results show very few of the covariates had a statistically significant relationship
+        relationship to the total and/or health-based SDWA violations. The results show very few of the covariates had a statistically significant relationship on 
         the SDWA violations. 
     </p>
 </div>
@@ -18,7 +18,6 @@
             <th scope="col">Covariate</th>
             <th scope="col">Areal Weighting</th>
             <th scope="col">County-Level</th>
-            <th scope="col">Dasymtric Mapping</th>
           </tr>
         </thead>
         <tbody>
@@ -71,7 +70,6 @@
             <th scope="col">Covariate</th>
             <th scope="col">Areal Weighting</th>
             <th scope="col">County-Level</th>
-            <th scope="col">Dasymtric Mapping</th>
           </tr>
         </thead>
         <tbody>
